Added meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/scriptly-studios-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Scriptly Studios, Roblox, Flag Wars, Yacht Tycoon" />
+    <meta name="description" content="The official website for Scriptly Studios, a Roblox development team. Checkout the new Season 3 update for Flag Wars!" />
     <title>Scriptly Studios</title>
   </head>
   <body>
